bug 1304: Not a final commit. Just required to test this change on the server side
git-svn-id: file:///tmp/svnroot_only_rec/internal/rec-project/rec/trunk@5912 8c4c7310-a39f-45c4-bd0d-b10b2e5d99a4